[PLAT-20174] [V2 API] List a customer's universes
Summary: Add a V2 API endpoint to list a customer's universes, functionally equivalent to the existing V1 API.

Test Plan:
Tested by using a shaded client JAR:

```
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath(
        String.format("%s/api/v2", ppm.getProjectPlatform().getPlatform().getHostname()));
    ApiKeyAuth apiKeyAuth = (ApiKeyAuth) defaultClient.getAuthentication("apiKeyAuth");
    apiKeyAuth.setApiKey(ppm.getApiKey());

    UniverseApi apiInstance = new UniverseApi(defaultClient);
    int pageSize = 2;
    UniversePagedQuerySpec querySpec =
        new UniversePagedQuerySpec()
            .direction(UniversePagedQuerySpec.DirectionEnum.DESC)
            .limit(pageSize);

    try {
      UniversePagedResp pagedResp = apiInstance.pageListUniverses(ppm.getCustomerUUID(), querySpec);
      boolean hasNext = true;

      while (hasNext) {
        if (pagedResp.getEntities() != null) {
          for (Universe u : pagedResp.getEntities()) {
            log.info("Received response: {}", u);
          }
        }

        hasNext = Boolean.TRUE.equals(pagedResp.getHasNext());
        if (hasNext) {
          pagedResp =
              apiInstance.pageListUniverses(ppm.getCustomerUUID(), querySpec.offset(pageSize));
        }
      }
    } catch (ApiException e) {
      throw new RuntimeException(e);
    }
```

Response:
```
2026-04-14 19:12:28.501 INFO  BYOCCustomerPollingTask.java:116 - 321feca6-0982-4cba-b452-578d2adf8efc Received response: class Universe {
    spec: class UniverseSpec {
        name: amindrov-xcluster-src-auto-ddl
        ybSoftwareVersion: 2025.2.2.2-b9
...
2026-04-14 19:12:29.889 INFO  BYOCCustomerPollingTask.java:116 - 321feca6-0982-4cba-b452-578d2adf8efc Received response: class Universe {
    spec: class UniverseSpec {
        name: amindrov-xcluster-src
        ybSoftwareVersion: 2024.2.4.0-b70
...
2026-04-14 19:12:44.476 INFO  BYOCCustome
